Mobile interface improvements

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="modal-body">
           <textarea id="plansDescription" class="form-control" placeholder="What are your plans?" value="">
           </textarea>
-          <button class="btn btn-sm btn-info">Edit</button>
+          <button id="editPlansBtn" class="btn btn-info">Edit</button>
         </div>
         <div class="modal-footer">
           <button id="closeWithoutSaveBtn" type="button" class="btn btn-danger" data-dismiss="modal">Close without saving</button>
@@ -99,7 +99,11 @@
     <main id="wrapper" class="container-lg">        
     </main>
 
-    <i id="addTimeBlockBtnAfternoon" class="fas fa-plus-circle"><p>Add Afternoon Block</p></i>
+	<i id="addTimeBlockBtnAfternoon" class="fas fa-plus-circle"><p>Add Afternoon Block</p></i>
+
+	<footer class="container-fluid">
+        <p id="footer-name">© Munkhtsogt Battsogt 2020</p>
+    </footer>
     
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/script.js" type="text/javascript"></script>
