--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Oxanium|Roboto|Sawarabi+Gothic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Bellota|Roboto|Sawarabi+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" type="text/css" href="assets/media.css">    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -36,9 +36,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="https://moojigc.github.io/portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://moojigc.github.io/contact.html">Contact</a>
-                </li>
                 <!-- <a href="" class="btn btn-primary language-button">
                     日本語
                 </a> -->
@@ -55,9 +52,6 @@
                   <li class="nav-item">
                     <a class="nav-link" href="https://moojigc.github.io/portfolio.html">Portfolio</a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="https://moojigc.github.io/contact.html">Contact</a>
-                  </li>
                   <!-- <a href="" class="btn btn-primary language-button">
                       日本語
                   </a> -->
@@ -65,35 +59,35 @@
                 </ul>
               </div>
         </div>
-  </header>
-  
-<div class="modal fade" id="plansEditorModal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Today's agenda:</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-			<p id="plansDescriptionStatic"></p>
-			<textarea id="plansEditBox" class="form-control" placeholder="What are your plans?" value="">
-			</textarea>
-			<button id="editPlansBtn" class="btn btn-info">Edit</button>
-        </div>
-        <div class="modal-footer">
-          <button id="closeBtn" type="button" class="btn btn-danger" data-dismiss="modal">Close without saving</button>
-          <button id="saveBtn" type="button" class="btn btn-primary">Save</button>
-        </div>
-      </div>
-    </div>
-  </div>
+	</header>
+
+	<div class="container-fluid display-none" id="plansEditorModal"> 
+		<div class="container-md" id="modalBody">
+			<div class="row">
+				<h2 id="modalTitle">Loading...</h2>
+				<button class="btn" style="padding: 0;">
+					<i class="fas fa-window-close"></i>
+				</button>
+			</div>
+			<div class="row" style="position: relative; background: whitesmoke; border-radius: 0.5rem; box-shadow: 0px 0px 10px 1px darkgray;">
+				<div id="plansDescriptionStatic">No plans for right now!</div>
+				<textarea id="plansEditBox" class="form-control display-none" placeholder="What are your plans?" value="">
+				</textarea>
+				<button class="btn" id="editPlansBtn">
+					<i class="fas fa-pencil-alt"></i>
+				</button>
+			</div>
+			<div class="row" style="margin: 1rem 0 0 0; justify-content: end;">
+				<button type="close" id="closeBtn" class="btn btn-dark">Close</button>
+				<button type="save" id="saveBtn" class="btn btn-success" style="margin-left: 1rem;">Save</button>
+			</div>
+		</div>
+	</div>
 
 	<div class="jumbotron">
-		<h1 class="display-3">A Work Day Scheduler</h1>
+		<h1 class="display-3">YourWorkDay</h1>
 		<p class="lead">A simple calendar app for scheduling your work day.</p>
-		<p id="currentDayDiv" class="lead btn btn-block btn-outline-info" disabled></p>
+		<p id="currentDayDiv" class="lead btn btn-block btn-outline-info disabled" disabled></p>
 	</div>
 	<i id="addTimeBlockBtnMorning" class="fas fa-plus-circle"><p>Add Morning Block</p></i>
 	
@@ -107,6 +101,8 @@
     </footer>
     
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script.js" type="text/javascript"></script>
+	<script src="assets/script.js" type="text/javascript"></script>
+	<script src="assets/modal.js" type="text/javascript"></script>
+	<script src="assets/editor.js" type="text/javascript"></script>
 
 </body>
