Footerの振り仮名が直りました

--- a/index_ja.html
+++ b/index_ja.html
@@ -97,7 +97,7 @@
 	<i id="addTimeBlockBtnAfternoon" class="fas fa-plus-circle"><p>午後のブロックを付ける</p></i>
 
 	<footer class="container-fluid">
-        <p id="footer-name"><ruby>Ⓒ Munkhtsogt Battsogt 2020年<rt>ムンクツォクト・バッツォクト</rt></ruby></p>
+        <p id="footer-name">Ⓒ <ruby>Munkhtsogt Battsogt 2020<rt>ムンクツォクト・バッツォクト</rt>年</ruby></p>
     </footer>
     
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
